# LibCMaker_SQLite3

./: .appveyor.yml  .travis.yml  README.md  cmr_build_sqlite3.cmake
ci/: ci_lib_params.sh
cmake/: cmr_build_rules_sqlite3.cmake  cmr_find_package_sqlite3.cmake  cmr_get_download_params_sqlite3.cmake
cmake/modules/: FindSQLite3.cmake
patch/sqlite3/: CMakeLists.txt
samples/TestCompileWithSQLite3/: CMakeLists.txt  README.md
samples/TestCompileWithSQLite3/test/: CMakeLists.txt
samples/ci_sample/: CMakeLists.txt  README.md
samples/ci_sample/src/: example.cpp  example_test.cpp
samples/ci_sample/test/: CMakeLists.txt
